grammar.js
    file: ($) => seq(optional($._header), repeat1($._module_elem)),
    //TODO i could make a different version of this for when the module is an interface
    _module_elem: ($) =>
      choice(
        $.annotation_type_def,
        $.alias_type_def,
        $.opaque_type_def,
        $.nominal_type_def,
        $.expect,
        alias($._module_value_declaration, $.value_declaration),
        alias($._module_var_declaration, $.var_declaration),
        $.expr_body,
        $.import_expr,
        $.import_file_expr,
      ),

    expect: ($) => prec(1, seq("expect", field("body", $.expr_body))),

    // Module annotations are siblings; blocks retain the legacy combined node
    // until statement boundaries can be represented without extra GLR states.
    _module_value_declaration: ($) =>
      seq(
        alias($._assignment_pattern, $.decl_left),
        "=",
        field("body", alias($.expr_body_terminal, $.expr_body)),
      ),

    value_declaration: ($) => seq(optional($.annotation_type_def), $._module_value_declaration),

    // Only block declarations accept plain tag destructuring. The opener is
    // emitted only when the matching closing parenthesis precedes assignment.
    _block_tag_declaration: ($) =>
      seq(
        alias($.decl_left_tag, $.decl_left),
        "=",
        field("body", alias($.expr_body_terminal, $.expr_body)),
      ),

    body_expression: ($) =>
      seq(
        "{",
        repeat1(
          choice(
            $.value_declaration,
            alias($._block_tag_declaration, $.value_declaration),
            $.var_declaration,
            $.local_type_binding,
            $.expect,
            $._expr_inner,
          ),
        ),
        "}",
      ),

    expr_body: ($) => $._expr_inner,
    _postfix_expr: ($) =>
      choice(
        $._primary_expr,
        $.field_access_expr,
        $.tuple_access_expr,
        $.function_call_pnc_expr,
        $.suffix_op_expr,
      ),

    _atom_expr: ($) => choice($._postfix_expr, $.prefixed_expression),

    _expr_inner: ($) => choice($.bin_op_expr, $._atom_expr),

    //orginally this had all operators, but it was making the parser almost twice as large so I cut the list down
    for_expr: ($) =>
      seq(
        "for",
        field("pattern", $._pattern),
        "in",
        field("iterable", $._expr_inner),
        field("body", $._expr_inner),
      ),
    break_expr: () => "break",
    if_expr: ($) =>
      prec.right(
        seq(
          "if",
          field("guard", $._expr_inner),
          $.then,
          optional(choice(seq(repeat1($.else_if), optional($.else)), $.else)),
        ),
      ),
    else: ($) => seq("else", $._expr_inner),
    // biome-ignore lint/suspicious/noThenProperty: <explanation>
    then: ($) => seq(field("then", $._expr_inner)),
    function_call_pnc_expr: ($) =>
      prec.left(
        PREC.FUNC,
        seq(
          field("caller", $._postfix_expr),
          imm("("),
          optional(field("args", $._expression_args)),
          ")",
        ),
      ),

    // Sharing this recursive list keeps it from expanding into each argument context.
    _expression_args: ($) => sep1_tail($._expr_inner, ","),

    bin_op_expr: ($) =>
      field(
        "part",
        prec(
          PREC.PART,
          seq(
            $._atom_expr,
            // Keeping operands atomic lets the enclosing repeat own
            // subsequent operators without reopening the expression tier.
            prec.right(repeat1(seq($.operator, $._atom_expr))),
          ),
        ),
      ),
    // Suffixes bind to the nearest postfix expression. Pipelines use the same
    // operand rule as every other operator rather than rebuilding this tier.
    _match_start: ($) => seq(alias("match", $.match), $._expr_inner),

    match_expr: ($) => seq($._match_start, "{", repeat1(field("branch", $.match_branch)), "}"),

    match_branch: ($) =>
      seq(
        field("pattern", $._pattern),
        optional(seq("if", alias($._expr_inner, $.if))),
        $.fat_arrow,
        //TODO: evaluate what options can got here
        field("expr", $.expr_body),
        optional(","),
      ),
    tag_expr: ($) => prec.left(seq($.tag, repeat(seq("(", $._atom_expr, ")")))),
    anon_fun_expr: ($) =>
      prec.left(
        seq("|", field("args", optional($.argument_patterns)), "|", field("body", $.expr_body)),
      ),

    //RECORDS

    _pattern: ($) =>
      choice(
        alias("_", $.wildcard_pattern),
        alias($.const, $.const_pattern),
        alias($.string_pattern, $.const_pattern),
        $.identifier_pattern,
        $.disjunct_pattern,
        $.conjunct_pattern,
        $.cons_pattern,
        $.paren_pattern,
        $.list_pattern,
        prec(3, $.tag_pattern),
        $.nominal_constructor_pattern,
        $.nominal_record_pattern,
        $.record_pattern,
        $.tuple_pattern,
        $.spread_pattern,
        $.as_pattern,
      ),

    identifier_pattern: ($) => prec(PREC.FIELD_ACCESS_START + 1, $.identifier),
    nominal_constructor_pattern: ($) =>
      seq($.tag, imm(".("), field("value", $._nominal_pattern_payload), ")"),

    _nominal_pattern_payload: ($) => sep1_tail($._pattern, ","),

    tag_pattern: ($) =>
      prec.left(
        seq(
          $.tag,
          optional(seq("(", optional(field("args", $._pattern_args)), ")")),
        ),
      ),
    argument_patterns: ($) => $._pattern_args,

    // Tags and lambdas use the same atomic, trailing-comma argument syntax.
    _pattern_args: ($) => sep1_tail($._atomic_pattern, ","),
    _atomic_pattern: ($) =>
      choice(
        "null",
        alias("_", $.wildcard_pattern),
        $.const,
        alias($.string_pattern, $.const_pattern),
        $.identifier_pattern,
        $.list_pattern,
        $.tuple_pattern,
        $.record_pattern,
        prec(2, $.tag_pattern),
        $.nominal_constructor_pattern,
        $.nominal_record_pattern,
        $.mutable_pattern,
        //TODO: this shhouldn't realy be here
        $.spread_pattern,
        $.paren_pattern,

        // :? atomic_type
      ),
    record_pattern: ($) => seq("{", optional($._record_pattern_fields), "}"),

    // Sharing this list avoids duplicating its GLR states for nominal records.
    _record_pattern_fields: ($) =>
      sep1_tail(choice($.spread_pattern, $.record_field_pattern), ","),

    record_field_pattern: ($) => seq($.field_name, optional(seq(":", $._atomic_pattern))),
    //###--------####
    //### HEADER ####
    //###--------###

    _header: ($) => choice($.app_header, $.platform_header, $.module_header, $.package_header),
    const: ($) =>
      choice(
        $.negative_number,
        $._unsigned_number,
        $.char,
        $.typed_string,
        $.string,
        $.multiline_string,
        "false",
        "true",
        // $.unit,
      ),

    _unsigned_number: ($) =>
      choice(
        // Dot-suffix literals must come before their unsuffixed prefixes.
        $.number_with_suffix,
        $.float,
        $.xint,
        $.int,
      ),

    // Roc lexes signed numerals as one token. A narrow external binary-minus
    // token handles the overlapping no-space subtraction form `value-1`.
    string: ($) =>
      seq('"', repeat(choice(imm(prec(0, /[^\n\\"]/)), $.interpolation_char, $.escape_char)), '"'),

    int: ($) => token(DECIMAL_INTEGER),
    // Modern numeric suffixes use an immediate `.UpperType`, including custom
    // numeric types. The compiler tokenizes the numeric core and suffix together.
    fat_arrow: ($) => "=>",
    field_name: ($) => alias($.identifier, $.field_name),

    _long_upper_identifier: ($) =>
      prec.right(seq(optional($._module_prefix), alias($._upper_identifier, $.identifier))),

    // Value and tag paths share the same qualified module prefix.
    identifier: ($) =>
      choice(
        token(prec(101, /\$?_*[\p{Ll}][\p{XID_Continue}]*!/)),
        token(prec(101, /\$?_+[\p{Ll}][\p{XID_Continue}]*/)),
        prec(100, seq(optional("$"), $._lower_identifier)),
      ),

    _lower_identifier: ($) => /[\p{Ll}][\p{XID_Continue}]*/,

    tag: ($) => $._long_upper_identifier,
    line_comment: ($) => token(prec(-1, /#[^\n]*/)),

    operator: ($) => alias($.operator_identifier, $.operator),
